Fixed the alignment of the timeline dots to the line

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -48,6 +48,8 @@ h1,h2,h4,h5,h6 {
 			width: 800px;
 			height: 60px;
 			overflow: hidden;
+			margin:0;
+			padding:0;
 		}
 			#dates li {
 				list-style: none;
